2.8: Removing keymap items no longer works #53715

Closed
opened 2018-01-08 00:11:50 +01:00 by Campbell Barton · 5 comments

Trying to remove keymap items in 2.8x no longer works.
Looked into this and it seems the RNA-override code disables RNA_property_equals from working with keymap items, needed when updating keymaps. (regression caused by 5566a88873)

Mentioned this in IRC, reporting to keep track of this issue.

Trying to remove keymap items in 2.8x no longer works. Looked into this and it seems the RNA-override code disables RNA_property_equals from working with keymap items, needed when updating keymaps. (regression caused by 5566a88873) Mentioned this in IRC, reporting to keep track of this issue.
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Bastien Montagne was assigned by Campbell Barton 2018-01-08 00:13:11 +01:00

Yes, have been working on this end of last week, there are several related issues in this code actually (mainly boiling down to 'we need to support IDProps'). Made some progress, but not all of it is working/fixed yet.

Yes, have been working on this end of last week, there are several related issues in this code actually (mainly boiling down to 'we need to support IDProps'). Made some progress, but not all of it is working/fixed yet.

Note that 5566a88873 is not the culprit here, issue exists prior to this commit (most certainly caused by the initial override commit touching to RNA comparison functions).

Note that 5566a88873 is not the culprit here, issue exists prior to this commit (most certainly caused by the initial override commit touching to RNA comparison functions).

This issue was referenced by de91f2389d

This issue was referenced by de91f2389da4c4428f2310e268a49b1f6af82738

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53715
No description provided.